# text-connect

./: .pre-commit-config.yaml  README.md  pyproject.toml
deploy/: docker-compose.yaml  frontend.Dockerfile
frontend/public/: about.txt  index.html
frontend/src/UI/Button/: Button.css  Button.jsx
frontend/src/UI/Input/: Input.css  Input.jsx
frontend/src/UI/Title/: Title.css  Title.jsx
frontend/src/components/ButtonsList/: ButtonsList.css  ButtonsList.jsx
frontend/src/components/Form/: Form.css  Form.jsx
frontend/src/pages/: App.css  App.js
