[tool.poetry]
name = "textconnect"
version = "0.1.0"
description = ""
authors = ["YarQR <rosya6721@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
